--- a/templates/settings.html
+++ b/templates/settings.html
@@ -11,6 +11,10 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link href="assets/css/slick.css" rel="stylesheet"> -->
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/site.webmanifest">
     <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 	  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
@@ -61,6 +65,8 @@
       <li><a href="health.html">Health</a></li>
       <li><a href="weather.html">Weather</a></li>
       <li><a href="about_us.html">About Us</a></li>
+      <li><a href="settings.html">Settings</a></li>
+
       <!-- <li><a href="#">Contact</a></li> -->
     </ul>
 </div>
@@ -160,10 +166,10 @@
                   <option value = "thirtieth">30</option>
                   <option value = "thirty-first">31</option>
                 </select><br><br>
-                <br>  SMS Number for Move Reminders<br> How often? (in minutes)<br>
+                <!-- <br>  SMS Number for Move Reminders<br> How often? (in minutes)<br>
                   <input type = "text" name = "number" placeholder = "SMS"> <input type = "text" name = "minute" placeholder = "minutes"><br><br>
 
-                <br>
+                <br> -->
                 Time Zone <br>
                 <select name = "time_zone">
                   <option value = "est">Eastern Standard Time</option>
@@ -238,10 +244,10 @@
                     <span class="star star--6"></span>
                   </label>
                 </div> -->
-                <a href="sms://+12538885523?body=I%27m%20interested%20in%20your%20product.%20Please%20contact%20me.">Send a SMS message</a>
+                <!-- <a href="sms://+12538885523?body=I%27m%20interested%20in%20your%20product.%20Please%20contact%20me.">Send a SMS message</a> -->
 
               <br><br>
-              <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="goPython()">
+              <!-- <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="goPython()">
 
               <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
@@ -254,11 +260,8 @@
                       alert('finished python script');;
                      });
                  }
-             </script>
-                <br>
-                <br>
-                <br>
-                <br>
+             </script> -->
+
                 <a href="index.html" onclick="goPython()" class="mu-btn view-my-work-btn">Save & Go Home<a>
 
                   <br>
