--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -11,6 +11,10 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link href="assets/css/slick.css" rel="stylesheet"> -->
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/site.webmanifest">
     <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 	  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
