--- a/templates/health.html
+++ b/templates/health.html
@@ -11,6 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Classify</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/site.webmanifest">
     <!-- <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/> -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -65,6 +69,7 @@
       <li><a href="calendar.html">Calendar</a></li>
       <li><a href="health.html">Health</a></li>
       <li><a href="weather.html">Weather</a></li>
+      <li><a href="about_us.html">About Us</a></li>
       <li><a href="settings.html">Settings</a></li>
       <!-- <li><a href="#">Contact</a></li> -->
     </ul>
