--- a/templates/weather2.html
+++ b/templates/weather2.html
@@ -1,93 +1,95 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Classify</title>
+    <!-- <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/> -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="assets/css/slick.css" rel="stylesheet"> -->
+    <link href="assets/css/magnific-popup.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
     <link rel="manifest" href="assets/images/site.webmanifest">
+    <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/site.webmanifest">
+
+    <header id="mu-header" class="" role="banner">
+  		<div class="container">
+  			<nav class="navbar navbar-default mu-navbar">
+  		  <div class="container-fluid">
+  		    <div class="navbar-header">
+  		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+  		        <span class="sr-only">Toggle navigation</span>
+  		        <span class="icon-bar"></span>
+  		        <span class="icon-bar"></span>
+  		        <span class="icon-bar"></span>
+  		      </button>
+
+  		      <a class="navbar-brand" href="index.html">Classify</a>
+
+
+  		    </div>
+          <div class="menu">
+      <div class="title">MENU</div>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="todolist.html">ToDo </a></li>
+        <li><a href="calendar.html">Calendar</a></li>
+        <li><a href="health.html">Health</a></li>
+        <li><a href="weather.html">Weather</a></li>
+        <li><a href="about_us.html">About Us</a></li>
+        <li><a href="settings.html">Settings</a></li>
+
+        <!-- <li><a href="#">Contact</a></li> -->
+      </ul>
+  </div>
+  		  </div>
+  		</nav>
+  		</div>
+  	</header>
+<!-- Breaks -->
+
+    </head>
+    <section id="mu-featured-slider">
+  		<div class="container">
+  			<div class="row">
+  				<div class="col-md-12">
+  					<div class="mu-featured-area">
+  						<h1>Weather</h1>
+              	<div class="mu-featured-content">
+                </div>
+              </section>
+              <section id="mu-contact">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="mu-contact-area">
+
+                        <div class="mu-contact-header">
+                          <h2 class="mu-heading-title">Weather</h2>
+                          <span class="mu-header-dot"></span>
     <form>
       <input type="textbox" id="searchterm" placeholder="zip code,postal code or city name"> <br>
       <input type="button" id="click" value="submit"></input>
       <input type=button onClick="location.href='index.html'" value='Go Home'></input> <br> <br>
     </form>
-    <style media="screen">
-    body {
-      background: linear-gradient(-90deg, #2FC5BA, #62C6C9, #2FC5BA);  color: #b9abff;
-      display: grid;
-      font-family: 'Helvetica', Arial, sans-serif;
-      height: calc(100vh - 8rem);
-      padding: 4rem;
-      place-content: center;
-    }
 
-    body {
-      height: 100vh;
-      width: 100%;
-      margin: 10px;
-      font-family: 'Helvetica', Arial, sans-serif;
-      font-size: 21px;
-      color: #333;
-      line-height: 1.5;
-      background: linear-gradient(-90deg, #2FC5BA, #62C6C9, #2FC5BA);
-    }
-
-
-    h1 {
-      font-family: 'Poppins', sans-serif;
-      font-weight: 700;
-      font-size: 3rem;
-      color: #328ca8;
-      margin: 0;
-    }
-
-    span{
-      font-size: 0.75rem;
-
-    }
-
-    span b {
-      font-size: 150%;
-    }
-
-    span d {
-      font-size: 110%;
-
-
-    }
-
-
-
-    * {
-      position: relative;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      border-color: inherit;
-    }
-
-    img{
-      margin: 10px;
-    }
-
-    .pic{
-      height: 15%;
-      width: 15%;
-    }
-
-    body {
-      width: 100vw;
-      height: 100vh;
-      overflow-x: hidden;
-      overflow-y: scroll;
-      font-size: 133%;
-      font-style: normal;
-      font-weight: 300;
-      line-height: 1;
-      margin: 10px;
-      padding: 0.5;
-      color: #0b0f3b
-    }
-    </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script type="text/javascript">
     function processResponse(response){
@@ -175,7 +177,6 @@
 
   </script>
     <!-- <link rel ="stylesheet" href="/assets/css/weather.css"> -->
-  </head>
   <body>
     <div id="date">
       <h1>Today's Weather</h1> <br>
@@ -258,5 +259,24 @@
         <br>
       </div>
     </div>
+  </div>
+</div>
+</div>
+
+
+</div>
+</div>
+
+
+</section>
+    <footer id="mu-footer" role="contentinfo">
+  			<div class="container">
+  				<div class="mu-footer-area">
+            <p> Google CSSI 2019 </p>
+  				</div>
+  			</div>
+
+  	</footer>
   </body>
+
 </html>
